--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -5,6 +5,10 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
+  
+
 }
 
 img {
@@ -16,6 +20,7 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 8px 16px;
 }
 
 input {
@@ -25,3 +30,46 @@ input {
   width: 400px;
   margin-bottom: 16px;
 }
+
+a {
+text-decoration: none;
+color: #595959;
+
+
+}
+
+.left-links, .right-links{
+  list-style: none;
+  display: flex;
+  gap: 16px;  
+  padding-left: 16px;
+  padding-right: 16px;
+}
+
+.content{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex: 1;
+  
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  
+  
+
+}
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  background-color: #e6e6e6;
+  
+  
+}
+
+
+
